--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Sistema de Etiquetas Integrado</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -62,7 +62,7 @@
 
     </div>
 
-    <script src="js/index.js"></script>
+    <script src="index.js"></script>
 
 </body>
 
